# inference

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  codecov.yml
.cargo/: config.toml
.github/workflows/: build.yml  build_release.yml  coverage.yml  miri.yml  reusable-build.yml
apps/infs/: Cargo.toml  README.md  build.rs
apps/infs/docs/: inference-toml.md  qa-test-suite.md
apps/infs/src/: errors.rs  main.rs
apps/infs/src/commands/: build.rs  default.rs  doctor.rs  init.rs  install.rs  list.rs  mod.rs  new.rs  run.rs  self_cmd.rs  uninstall.rs  version.rs  versions.rs
apps/infs/src/project/: manifest.rs  mod.rs  scaffold.rs
apps/infs/src/toolchain/: archive.rs  conflict.rs  doctor.rs  download.rs  manifest.rs  mod.rs  paths.rs  platform.rs  resolver.rs  shell.rs  verify.rs
apps/infs/src/tui/: app.rs  install_task.rs  menu.rs  mod.rs  state.rs  terminal.rs  theme.rs
apps/infs/src/tui/views/: doctor_view.rs  main_view.rs  mod.rs  progress_view.rs  toolchain_view.rs  version_select_view.rs
apps/infs/src/tui/widgets/: command_history.rs  mod.rs
apps/infs/tests/: cli_integration.rs
apps/infs/tests/fixtures/: assume_test.inf  exists_test.inf  forall_test.inf  nondet.inf  syntax_error.inf  trivial.inf  type_error.inf  unique_test.inf  uzumaki.inf
apps/lsp/: Cargo.toml  README.md
apps/lsp/src/: main.rs
ast/: Cargo.toml
ast/src/: builder.rs  lib.rs  node.rs  node_kind.rs  types.rs  types_impl.rs
book/: check_deps.ps1  installation_linux.md  installation_macos.md  installation_windows.md
cli/: Cargo.toml
cli/src/: main.rs  parser.rs
cli/tests/: cli_integration.rs
core/ast/: README.md
core/ast/docs/: architecture.md  arena-api.md  location.md  nodes.md
core/ast/src/: arena.rs  builder.rs  enums_impl.rs  errors.rs  extern_prelude.rs  lib.rs  nodes.rs  nodes_impl.rs  parser_context.rs  t_ast.rs
core/cli/: Cargo.toml  README.md
core/cli/src/: main.rs  parser.rs
core/cli/tests/: cli_integration.rs
core/inference/: Cargo.toml  DOCUMENTATION_SUMMARY.md  README.md
core/inference/src/: lib.rs
core/type-checker/: Cargo.toml  README.md
core/type-checker/docs/: api-guide.md  architecture.md  errors.md  type-system.md
core/type-checker/src/: errors.rs  lib.rs  symbol_table.rs  type_checker.rs  type_info.rs  typed_context.rs
core/wasm-codegen/: Cargo.toml  README.md  build.rs
core/wasm-codegen/src/: compiler.rs  lib.rs  utils.rs
core/wasm-to-v/: README.md
core/wasm-to-v/src/: lib.rs  translator.rs  wasm_parser.rs
editors/vscode/: README.md  esbuild.mjs  language-configuration.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: inference.tmLanguage.json
editors/vscode/test/fixtures/: sample.inf
ide/base-db/: Cargo.toml  README.md
ide/ide/: Cargo.toml  README.md
ide/ide-db/: Cargo.toml  README.md
ide/vfs/: Cargo.toml  README.md
infc/: Cargo.toml
infc/src/: main.rs  parser.rs
infc_compiler/: Cargo.toml
infc_compiler/src/: lib.rs
infc_compiler/src/ast/: builder.rs  mod.rs  types.rs  types_impl.rs
infc_compiler/src/wasm_to_coq_translator/: mod.rs  translator.rs  wasm_parser.rs
infc_compiler/src/wat_codegen/: mod.rs  wat_generator.rs
inference/: Cargo.toml
inference/src/: lib.rs  t.rs
inference/src/compiler/: Cargo.toml
inference/src/compiler/samples/: example.inf
inference/src/compiler/src/: main.rs  main_tests.rs
inference/src/compiler/src/ast/: builder.rs  builder_tests.rs  types.rs  types_impl.rs
inference/src/compiler/src/cli/: parser.rs
inference/src/compiler/src/wasm_to_coq_translator/: translator.rs  wasm_parser.rs
inference/src/compiler/tests/: ast_builder_tests.rs
inference/src/inference-documentation/: Cargo.toml
inference/src/inference-documentation/src/: docstrings_grabber.rs  lib.rs  main.rs
inference/src/inference-proc-macros/src/: lib.rs
playground-server/: Cargo.toml
playground-server/src/: main.rs
test_data/inf/: example.inf  test_parse_source_file_1.inf  test_parse_source_file_2.inf  test_parse_source_file_3.inf
test_data/rust/: lib.rs
tests/: Cargo.toml
tests/src/: lib.rs  utils.rs
tests/src/ast/: builder.rs  builder_extended.rs  mod.rs  nodes.rs
tests/src/codegen/wasm/: base.rs
tests/src/type_checker/: array_tests.rs  associated_functions.rs  coverage.rs  error_recovery.rs  features.rs  mod.rs  type_checker.rs  type_info_tests.rs
tests/test_data/codegen/wasm/base/: const.inf  const.wasm  nondet.inf  nondet.wasm  trivial.wasm
tests/test_data/inf/: example.inf
wasm-v-translator/: Cargo.toml
wasm-v-translator/src/: translator.rs  wasm_parser.rs
wat-codegen/src/: lib.rs  wat_emitter.rs  wat_generator.rs
wat-fmt/: Cargo.toml
wat-fmt/src/: lib.rs
