[workspace]

resolver = "2"

members = [
    "ast",
    "cli",
    "wasm-v-translator",
    "wat-codegen",
    "inference",
    "tests",
    "playground-server",
    "wat-fmt",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "GPL-3.0"
homepage = "https://inferara.com"
repository = "https://github.com/Inferara/inference"

[workspace.dependencies]
inference = { path = "./inference", version = "0.0.1" }
inference-ast = { path = "./ast", version = "0.0.1" }
inference-cli = { path = "./cli", version = "0.0.1" }
inference-wasm-v-translator = { path = "./wasm-v-translator", version = "0.0.1" }
inference-wat-codegen = { path = "./wat-codegen", version = "0.0.1" }
inference-tests = { path = "./tests", version = "0.0.1" }
inference-playground-server = { path = "./playground-server", version = "0.0.1" }
inf-wast = "0.0.5"
inf-wasmparser = "0.0.5"
wat-fmt = { path = "./wat-fmt", version = "0.0.1" }
tree-sitter = "0.24.7"
tree-sitter-inference = "0.0.28"
anyhow = "1.0.44"
