[workspace]

resolver = "2"

members = [
    "core/*",
    "tools/*",
    "tests"
]

default-members = [
    "core/*",
    "tests"
]

[workspace.package]
version = "0.0.1"
rust-version = "1.91"
edition = "2024"
license = "GPL-3.0"
homepage = "https://inferara.com"
repository = "https://github.com/Inferara/inference"

[workspace.dependencies]
# Core Inference crates
inference = { path = "./core/inference", version = "0.0.1" }
inference-ast = { path = "./core/ast", version = "0.0.1" }
inference-type-checker = { path = "./core/type-checker", version = "0.0.1" }
inference-cli = { path = "./core/cli", version = "0.0.1" }
inference-wasm-to-v-translator = { path = "./core/wasm-to-v", version = "0.0.1" }
inference-wasm-codegen = { path = "./core/wasm-codegen", version = "0.0.1" }

# Test suite
inference-tests = { path = "./tests", version = "0.0.1" }

# Various supplementary tools
inference-playground-server = { path = "./tools/playground-server", version = "0.0.1" }
wasm-fmt = { path = "./tools/wasm-fmt", version = "0.0.1" }
wat-fmt = { path = "./tools/wat-fmt", version = "0.0.9" }
inf-wast = { path = "./tools/inf-wast", version = "0.0.9" }
inf-wasmparser = { path = "./tools/inf-wasmparser", version = "0.0.9" }

tree-sitter = "0.26.2"
tree-sitter-inference = "0.0.37"
anyhow = "1.0.100"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive", "rc"] }
leb128 = "0.2.5"
rustc-hash = "2.1.1"
inkwell = { version = "0.8.0", features = ["llvm21-1"] }
