[package]
name = "inference-ast"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
uuid = { version = "1.1", features = ["v4"] }
serde.workspace = true
tree-sitter.workspace = true
anyhow.workspace = true
