[package]
name = "inference-cli"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
walkdir = "2.5.0"
tempfile = "3.16.0"
anyhow.workspace = true
tree-sitter.workspace = true
tree-sitter-inference.workspace = true
inference.workspace = true
