[package]
name = "inference"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
inf-wast.workspace = true
anyhow.workspace = true
tree-sitter.workspace = true
tree-sitter-inference.workspace = true
inference-ast.workspace = true
inference-wat-codegen.workspace = true
inference-wasm-v-translator.workspace = true