[package]
name = "inference-tests"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
serde_json = "1.0.143"
anyhow.workspace = true
inference-ast.workspace = true
serde.workspace = true
tree-sitter.workspace = true
tree-sitter-inference.workspace = true