[package]
name = "inference-tests"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
inference-ast.workspace = true
inference-wasm-codegen.workspace = true
inference.workspace = true
inf-wasmparser.workspace = true
tree-sitter.workspace = true
tree-sitter-inference.workspace = true
anyhow.workspace = true
serde_json = "1.0.99"
wasmtime="39.0.1"
