[package]
name = "infs"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
description = "Inference unified CLI toolchain"
build = "build.rs"

[[bin]]
name = "infs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.13.1", default-features = false, features = ["rustls", "stream"] }
sha2 = "0.10"
zip = { version = "7.1.0", default-features = false, features = ["deflate"] }
flate2 = "1"
tar = "0.4"
semver = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
hex = "0.4"
futures-util = "0.3"
which = "8.0.0"
dirs = "6.0.0"
rand = "0.9.2"
ratatui = "0.30.0"
crossterm = "0.29.0"
anyhow.workspace = true
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
assert_fs = "1.1.1"
serial_test = "3.2"

[profile.release]
opt-level = "z"       # Optimize for size (not speed)
strip = true          # Remove symbols
codegen-units = 1     # Better optimization (slower compile)
lto = true            # Full link-time optimization
panic = "abort"       # Smaller binary, no unwinding
