[package]
name = "inference-cli"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
walkdir = "2.5.0"
tempfile = "3.24.0"
anyhow.workspace = true
inference.workspace = true

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
assert_fs = "1.1.1"

[[bin]]
name = "infc"
path = "src/main.rs"
