[package]
name = "inference-type-checker"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
inference-ast.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rustc-hash.workspace = true
