[package]
name = "inference-wasm-codegen"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
inkwell.workspace = true
tempfile = "3.3.0"
which = "8.0.0"
inference-ast.workspace = true
inference-type-checker.workspace = true
anyhow.workspace = true
