[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = ">=0.22.6"
tree-sitter-inference = "0.0.21"
wasmparser = "0.216.0"
anyhow = "1.0.44"
clap = { version = "4.5.15", features = ["derive"] }
walkdir = "2.5.0"
tempfile = "3"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
