cargo-features = ["edition2024"]

[package]
name = "inference-documentation"
version = "0.0.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.1"
syn ={ version = "2.0.58", features = ["full", "visit"] }
proc-macro2 = { version = "1.0.79", features = ["span-locations"] }